hphp/hack/test/typecheck/ppl/require_extends.php.exp
File "require_extends.php", line 8, characters 11-23:
an interface must be annotated with <<__PPL>> to require <<__PPL>> class: RequireMe (Typing[4257])
File "require_extends.php", line 5, characters 16-24:
Declaration is here
